correction learning graph : turn invisible "nodes with label".

--- a/learningGraph.html
+++ b/learningGraph.html
@@ -253,7 +253,7 @@ function ImageExist(url)
                 allNodes[nodeId].hidden = true;
             }
             else if (allNodes[nodeId].category == "learningConceptWithLabel"){
-                allNodes[nodeId].color = colorLearningConcept;
+                allNodes[nodeId].color = 'rgba(248,179,50,0)';
                 allNodes[nodeId].font = sizeOfLearningConceptLabel+'px lato white';
                 allNodes[nodeId].hidden = true;
                 allNodes[nodeId].size = sizeOfLearningConceptNodesWithLabel;
